# amazon-s3-plugin-for-pytorch

./: .coveragerc  .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  README.md  THIRD-PARTY-LICENSES  main.cpp  s3_cv_iterable_example.py  s3_cv_iterable_shuffle_example.py  s3_cv_map_example.py  s3_cv_transform.py  s3_nlp_iterable_example.py  setup.py  shuffle_test.py
awsio/: __init__.py
awsio/csrc/io/s3/: s3_file_wrapper.cpp  s3_io.cpp  s3_io.h
awsio/python/: __init__.py
awsio/python/lib/: __init__.py
awsio/python/lib/io/: __init__.py
awsio/python/lib/io/s3/: __init__.py  mnist_dataset.py  mnist_trainer.py  s3_file_wrapper.cpp  s3dataset.py  test.py
benchmarks/bert/: run_pretraining.py  run_pretraining_command.py
benchmarks/bert/scripts/: run_pretraining_4nodes.sh
benchmarks/cv/mmclassification/: README.md  command.sh
benchmarks/cv/mmclassification/configs/: README.md
benchmarks/cv/mmclassification/configs/_base_/: default_runtime.py  default_runtime_webds.py
benchmarks/cv/mmclassification/configs/imagenet/: resnet50_b64fsx.py  resnet50_ec2.py  resnet50_io_latency_10ms.py  resnet50_io_latency_5ms.py  resnet50_webds.py  resnext101_32x8d_ec2.py
benchmarks/cv/mmclassification/configs/imagenetfsx/: resnet50_b64.py
benchmarks/cv/mmclassification/configs/imagenets3/: resnet18_b32x8.py  resnet50_b32x8.py  resnet50_b64.py
benchmarks/cv/mmclassification/mmcls/apis/: train.py
benchmarks/cv/mmclassification/mmcls/datasets/: __init__.py  builder.py  filelist.py  fsxdataset.py  imagenet3_2.py  imagenetFSX.py  imagenet_webds.py  (+5 more)
benchmarks/cv/mmclassification/tools/: README.md  analyze_variability.py  commands.sh  execute_ddp.sh  execute_srun.sh  init_cluster.sh  run_benchmark_job.sh  run_train.sh  send_metrics.py  test_webdataset.py  train.py
example/: s3_bert.py
examples/: s3_cv_iterable_example.py  s3_cv_iterable_shuffle_example.py  s3_cv_map_example.py  s3_cv_transform.py  s3_imagenet_example.py  s3_nlp_iterable_example.py
tests/integration/: README.md  run_integration_test.py  start_test.sh
tests/py-tests/: test_hdf5.py  test_integration.py  test_num_workers.py  test_num_workers_boto.py  test_read_datasets.py  test_regions.py  test_s3dataset.py  test_s3iterabledataset.py  test_utils.py
tests/smoke_tests/: import_awsio.sh
tools/: get_version.py
(+17 files in other folders)
